Changes in openair 0.4-19 [2011-05-19]
===================================== 
* 	Added option "statistic" to polarPlot, which can now consider 
	"mean", "median", "max" (maximum), "frequency". "stdev" 
	(standard deviation) or "weighted.mean" in a similar way to polarFreq
* 	Fixed bad.24 and international tz bugs in import 
* 	updated import/import.2

Changes in openair 0.4-18 [2011-05-19]
=====================================
*	Better handling of missing data in smoothTrend/MannKendall;
	particularly when there are mutiple sites
*	Do not run checkPreo on selectByDate because it removes calms
*	Fixed scaling bug in polarFreq when ws.int != 1
*	use avg.time in calcPercentile instead of 'period' to ensure
	consistency with other functions (timePlot would fail with
	percentiles)
*	return NA in aqStats when no data present; previously it tried
	to calculate quanities, returning -Inf etc

Changes in openair 0.4-17 [2011-04-21]
=====================================
*	use readRDS and not .readRDS (caused failure on R Dev)
*	openair now depends on >=R2.13.0
*	NEW FUNCTION sqStats to calculate common and pollutant-specfic
	air quality statsitics by year and site.
*	Changed option data.capture in rollingMean to data.thresh to
	be consistent with other functions.

Changes in openair 0.4-16 [2011-04-13]
=====================================
*	Fixed bugs in cutData when a partial year was used with type
  	= "month". Also affected type = "season" and "weekday". The
  	plots were labelled in the wrong order.
*	Ensure that missing wind sectors are skipped in type = "wd"
	for smoothTrend, MannKendall, timePlot and scatterPlot

Changes in openair 0.4-15 [2011-04-12]
=====================================
*	Preparation for CRAN release
*	removed some restrictions on type/period combinations in polarAnnulus

Changes in openair 0.4-14 [2011-04-05]
=====================================
*	Added preliminary greyscale method to openColours and linked in 